--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Kevin Rodriguez</title>
+    <title>Kevin Rodríguez</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -46,7 +46,7 @@
 
             <div class="profile">
                 <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light"><a href="index.html">Kevin Rodriguez</a></h1>
+                <h1 class="text-light"><a href="index.html">Kevin Rodríguez</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="https://www.facebook.com/kevin.manuel.3760" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
                     <a href="https://www.instagram.com/kevinmanuel3760/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
